[package]
name = "exogress"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
license = "Apache-2.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "exogress"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
exogress-client-lib = { path =  "../deps/exogress/crates/client-lib", version = "0.1" }
