[package]
name = "exogress"
version = "0.0.1-alpha.1"
description = "Exogress client for Ruby"
authors = ["Exogress Team"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"
exclude = ["index.node", "artifacts.json"]

[lib]
name = "exogress"
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6", "event-queue-api"]

[dependencies]
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.2.0", features = ["client-core", "tunnel", "config-core", "entities", "common-utils"], default-features = false }
futures = "0.3.5"
trust-dns-resolver = "0.20.0"
hashbrown = "0.11.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt", "parking_lot"] }
anyhow = "1.0.41"
log = "0.4.14"
parking_lot = "0.11.1"

[build-dependencies]
neon-build = "0.8"
